# esp32_iot_node

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
components/logger/: CMakeLists.txt
components/logger/include/: logger_task.h
components/logger/src/: logger_task.c
components/mqtt_client/: CMakeLists.txt
components/mqtt_client/include/: mqtt_task.h
components/mqtt_client/src/: mqtt_task.c
components/sensor/: CMakeLists.txt
components/sensor/include/: sensor_driver.h  sensor_task.h
components/sensor/src/: sensor_driver.c  sensor_task.c
components/system_monitor/: CMakeLists.txt
components/system_monitor/include/: system_monitor.h
components/system_monitor/src/: system_monitor.c
main/: CMakeLists.txt  Kconfig.projbuild  config.h  main.c  processing_task.c  processing_task.h  rtos_handles.h  types.h  wifi_manager.c  wifi_manager.h
